# alrin

./: README.md  REUSE.toml  pyproject.toml
src/alrin/: __init__.py  binaries.py  buildinfo.py  exceptions.py  logging.py  metadata.py  resolver.py  source.py  state.py  wrappers.py
src/alrin/cli/: __init__.py
src/alrin/cli/commands/: __init__.py  bulk_update.py  group.py  pkg_add.py  pkg_rebuild.py  pkg_remove.py  pkg_update.py
src/alrin/cli/commands/bulk/: __init__.py  group.py  update.py
src/alrin/cli/commands/keyring/: __init__.py  backup.py  group.py  restore.py
src/alrin/cli/commands/pkg/: __init__.py  add.py  group.py  rebuild.py  remove.py  update.py
src/alrin/workflow/: __init__.py  alpmdb.py  dest.py  git.py  gnupg.py  jail.py  pkgbuild.py  signing.py
viat_sample/: config.toml  schema.json
